<resources>
    <string name="app_name">Plantilla3SQLITECRUDSIMPLE3BOTONES</string>

    <string name="str_btnbuscar">Buscar Libro</string>
    <string name="str_btnregistrar">Registrar Libro</string>
    <string name="str_btnListar">Listar Libro</string>

    <string name="str_titulo">Titulo</string>
    <string name="str_subtitulo">Subtitulo</string>
    <string name="str_isbn">ISBN</string>
    <string name="str_autor">Autor</string>
    <string name="str_anio_publicacion">Año de Publicación</string>
    <string name="str_precio">Precio</string>

    <string name="str_bienvenido">Bienvenido</string>
    <string name="str_descripción_imagen">Todo</string>
    <string name="str_listarlibros">Listado de Libros</string>
    <string name="str_gestionlibros">Gestión de Libros</string>
    <string name="str_buscarlibros">Buscar Libro por titulo</string>
    <string name="str_digitetitulo">Digite el Libro a buscar</string>
</resources>